@@ -8,7 +8,7 @@ theory Sessions
   imports Pure
   keywords "session" :: thy_decl
     and "description" "directories" "options" "sessions" "theories"
-      "document_files" "export_files" :: quasi_command
+      "document_theories" "document_files" "export_files" :: quasi_command
     and "global"
 begin
 
